@startuml
left to right direction
skinparam classAttributeIconSize 0
hide empty methods

package "model" {
  class Customer <<entity>> {
    - customer_id    : int
    - customer_name  : String
    - phone          : String
    - email          : String
    - password       : String
    - address        : String
    - dob            : Date
    - gender         : String
    - account_status : String
    - image          : String
    + getters/setters()
  }
}

package "db" {
  class DBContext {
    - conn : Connection
    + getConnection() : Connection
  }
}

package "dao" {
  class CustomerDAO <<dao>> {
    + existsByEmail(email: String) : boolean
    + existsByPhone(phone: String) : boolean
    + getCustomerByEmail(email: String) : Customer
    + insert(c: Customer) : int
    - mapRow(rs: ResultSet) : Customer
  }
}

package "security" {
  class MD5PasswordHasher {
    + hashPassword(raw: String) : String
  }
}

package "controller" {
  class RegisterController <<controller>> {
    - customerDAO : CustomerDAO
    + doPost(req: HttpServletRequest, resp: HttpServletResponse) : void
    - parseDob(dobStr: String) : java.sql.Date
  }
}

CustomerDAO --|> DBContext
RegisterController ..> CustomerDAO
RegisterController ..> MD5PasswordHasher
CustomerDAO ..> Customer
@enduml
